# ManagerAgents

./: .gitignore  README.md  env.template  pyproject.toml
src/jira_loading_monitor/: crew.py  main.py
src/jira_loading_monitor/config/: agents.yaml  tasks.yaml
src/jira_loading_monitor/tools/: atlassian_tool.py  teams_tool.py
